@@ -1,3 +1,10 @@
+2004-01-03  Kai Grossjohann  <kai@emptydomain.de>
+
+	* tramp.el (tramp-handle-file-local-copy)
+	(tramp-handle-write-region, tramp-open-connection-rsh): Variable
+	name typo.  Small change.  From Patrick Tullmann
+	<tullmann@flux.utah.edu>.
+
 2003-12-27  Michael Albinus <Michael.Albinus@alcatel.de>
 
 	* tramp.el (tramp-completion-mode): Add XEmacs input
